# polyrepo-git-ui

./: .gitignore  PLAN.md  README.md  agents.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: build.yml  release.yml
.opencode/: opencode.json
.opencode/agent/: commit-enforcer.md
.opencode/plugins/: auto-commit.js
graphify-out/: .graphify_labels.json  GRAPH_REPORT.md  graph.html  graph.json  manifest.json
graphify-out/cache/: stat-index.json
scripts/: setup-demo-repo.sh
src/: App.svelte  app.css  svelte-masonry.d.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  git.rs  github.rs  lib.rs  main.rs  models.rs
src/lib/: stores.svelte.ts  tauri.ts  types.ts
src/lib/components/: AuthSetup.svelte  CloneModal.svelte  ImportModal.svelte  PRCard.svelte  PRDetail.svelte  PRList.svelte  Settings.svelte  Sidebar.svelte
